# keyvault

./: .env.test  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  generate_master_key.sh  grammar_usage_guide.md  queries.yaml
keyvault-ui/: Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  tsconfig.app.json
keyvault-ui/src/: App.tsx
keyvault-ui/src/api/: secrets.ts
keyvault-ui/src/components/: ProjectPage.tsx  SearchPage.tsx  SecretCard.tsx  SecretForm.tsx
keyvault-ui/src/stores/: useAuthStore.ts
keyvault-ui/src/types/: lucene-query-parser.d.ts  types.ts
src/: grammar.pest  lib.rs  lucene_parser.rs  main.rs
tests/: test_app.rs  test_lucene.rs
