[package]
name = "keyvault"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "json"] }
dotenvy = "0.15"
hyper = "1.6.0"
async-trait = "0.1.88"
