[package]
name = "keyvault"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "json"] }
dotenvy = "0.15"
hyper = "1.6.0"
async-trait = "0.1.88"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
pest = "2.8"
pest_derive = { version = "2.8", features = ["grammar-extras"] }
itertools = "0.14.0"

[dev-dependencies]
axum = { version = "0.8", features = ["macros", "tokio"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
hyper = "1.6"
tower = { version = "0.5", features = ["util"] }
once_cell = "1.21.3"
uuid = { version = "1.2", features = ["v4"] }
http-body-util = "0.1"
pest_debugger = "2.8.0"
pest_ascii_tree = "0.1.0"
